Fix input alignments to match destination input

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -207,8 +207,9 @@ html {
 }
 
 .BranchCondition {
+  margin-right: 75px;
   overflow: hidden;
-  padding-right: 75px;
+  padding-left: 13px;
   position: relative;
 
   &.error {
